syntax = "proto3";
package schema.v2;

import "v2/project_source.proto";

message ProjectArtifactOperationRequest {
	int32 project_generate_id = 1;
	ProjectSource project_source = 2;

	oneof operation {
    ReIndexDocumentOperation reindex_document = 3;
    ReIndexSourceCodeOperation reindex_source_code = 4;
  }

	message ReIndexDocumentOperation {
		oneof target {
			bool index_all = 1;
			DocumentPaths document_paths = 2;
		}
	}

	message DocumentPaths {
    repeated string paths = 1;  // List of document paths
  }

	message ReIndexSourceCodeOperation {
		Git git = 1;
	}
}

message ProjectArtifactOperationResponse {
	int32 project_generate_queue_id = 1;
	int32 project_id = 2;

	oneof status {
		Progress progress = 5;
		Success success = 6;
		Error error = 7;
	}

	message Progress {
		int32 progress = 1;
		string message = 2;
	}

	message Error {
		string code = 1;            // Error code (e.g., "INVALID_PATH", "AUTH_FAILED")
		string message = 2;         // Human-readable error message
		map<string, string> details = 3;
	}

	message Success {
		string message = 1;
		map<string, string> results = 2;
	}
}
